# openbanking.rs

./: .editorconfig  .gitignore  .rustfmt.toml  Cargo.toml  README.md  index.html
.circleci/: config.yml
examples/: EXAMPLES.md
payments/x-jws-signature/: REfZKo7zN2IeE0X2RFGTb4.jwks  package.json
src/: cli.rs  main.rs  server.rs  server_new.rs  terminal_utils.rs
src/client/: accounts.rs  certs.rs  claims.rs  client_credentials.rs  defaults.rs  http.rs  mod.rs  utils.rs
src/config/: mod.rs
src/config/testdata/: config_good.yml  register-response_forgerock.json  register-response_ozone.json
src/http/: CERTS.md  certs.rs  mod.rs
src/oidcdiscovery/: mod.rs  openid_configuration.rs
src/oidcdiscovery/testdata/: openid-configuration_forgerock.json  openid-configuration_ozone.json
src/server/: mod.rs
