[package]
name = "openbanking"
version = "0.1.0"
authors = ["Mohamed Bana <m@bana.io>"]
edition = "2018"
license-file = "./LICENSE"
description = "Open Banking client written in Rust Programming Language."
repository = "https://github.com/banaio/openbanking.rs"

[profile.release]
incremental = true
debug = true

# https://doc.rust-lang.org/rust-by-example/testing/dev_dependencies.html
[dev-dependencies.pretty_assertions]
version = "0.6.1"

[dependencies]
rustls = "0.15.2"

env_logger = "0.6.2"
clap = "2.33"
structopt = "0.2"
term_size = "0.3.1"
indicatif = "0.11.0"
dialoguer = "0.4.0"
rand = "0"
bytes = "0.4"
serde_yaml = "0.8"
serde_json = "1.0"
actix-web = "1.0.4"
actix-files = "0.1.3"
biscuit = "0.2.0"
url = "1.7.2"

[dependencies.log]
version = "0.4"
features = ["std", "serde"]
# features = ["max_level_debug", "release_max_level_warn"]

[dependencies.serde]
version = "1.0.95"
features = ["derive", "std"]

[dependencies.uuid]
version = "0.7"
features = ["serde", "v4"]

[dependencies.chrono]
version = "0.4"
features = ["serde"]

[dependencies.reqwest]
version = "0.9.18"
features = ["rustls-tls"]

[dependencies.tokio]
version = "0.1.22"
features = ["rt-full", "tcp"]
default-features = false

[dependencies.futures]
version = "0.1.28"

[dependencies.better-panic]
version = "0.1.2"
